Implemented threaded database writing and threaded schedule
