# api-spec.yml
@@ -116,109 +116,6 @@ paths:
           $ref: '#/components/responses/400InvalidInput'
         500:
           $ref: '#/components/responses/500InternalError'
-  /motor/move/{motor_id}:
-    patch:
-      tags:
-      - motor
-      summary: Move the blinds to a specified level
-      operationId: motor.move
-      parameters:
-        - name: motor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/level'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Motor"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /motor/rename/{motor_id}:
-    patch:
-      tags:
-      - motor
-      summary: Rename a motor
-      operationId: motor.rename
-      parameters:
-        - name: motor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: string
-              example: bedroom-1
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Motor"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /motor/activate/{motor_id}:
-    patch:
-      tags:
-      - "motor"
-      summary: "Activate a motor"
-      operationId: "motor.activate"
-      parameters:
-        - name: motor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Motor"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /motor/deactivate/{motor_id}:
-    patch:
-      tags:
-      - "motor"
-      summary: "Deactivate a motor"
-      operationId: "motor.deactivate"
-      parameters:
-        - name: motor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Motor"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
   # MOTOR CALIBRATION
   /motor/calibrate/start/{motor_id}:
     # This request asks the Hub to begin the calibration procedure.
@@ -443,52 +340,6 @@ paths:
           $ref: '#/components/responses/400InvalidInput'
         500:
           $ref: '#/components/responses/500InternalError'
-  /motion/activate/{motion_sensor_id}:
-    patch:
-      tags:
-      - "motion"
-      summary: "Activate a motion sensor"
-      operationId: motion-sensor.activate
-      parameters:
-        - name: motion_sensor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Motion"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /motion/deactivate/{motion_sensor_id}:
-    patch:
-      tags:
-      - "motion"
-      summary: "Deactivate a motion sensor"
-      operationId: motion-sensor.deactivate
-      parameters:
-        - name: motion_sensor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Motion"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
   /motion/update/{motion_sensor_id}:
     patch:
       tags:
@@ -506,94 +357,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/MotionNoId'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Motion"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /motion/rename/{motion_sensor_id}:
-    patch:
-      tags:
-      - "motion"
-      summary: "Rename a motion sensor"
-      operationId: motion-sensor.rename
-      parameters:
-        - name: motion_sensor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: "string"
-              example: "hallway-1"
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Motion"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /motion/change_motors/{motion_sensor_id}:
-    patch:
-      tags:
-      - "motion"
-      summary: "Change the motors the sensor controls"
-      operationId: motion-sensor.change_motors
-      parameters:
-        - name: motion_sensor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                type: integer
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Motion"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /motion/duration_sensitivity/{motion_sensor_id}:
-    patch:
-      tags:
-      - "motion"
-      summary: "Update duration sensitivity"
-      operationId: motion-sensor.change_duration_sensitivity
-      parameters:
-        - name: motion_sensor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: "string"
-              # pattern: hh:mm
       responses:
         200:
           description: OK
@@ -691,52 +454,6 @@ paths:
           $ref: '#/components/responses/400InvalidInput'
         500:
           $ref: '#/components/responses/500InternalError'
-  /light/activate/{light_sensor_id}:
-    patch:
-      tags:
-      - "light"
-      summary: "Activate a light sensor"
-      operationId: light-sensor.activate
-      parameters:
-        - name: light_sensor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Light"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /light/deactivate/{light_sensor_id}:
-    patch:
-      tags:
-      - "light"
-      summary: "Deactivate a light sensor"
-      operationId: light-sensor.deactivate
-      parameters:
-        - name: light_sensor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Light"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
   /light/update/{light_sensor_id}:
     patch:
       tags:
@@ -754,65 +471,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/LightNoId'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Light"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /light/rename/{light_sensor_id}:
-    patch:
-      tags:
-      - "light"
-      summary: "Rename a light sensor"
-      operationId: light-sensor.rename
-      parameters:
-        - name: light_sensor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: "string"
-              example: "hallway-1"
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Light"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /light/change_motors/{light_sensor_id}:
-    patch:
-      tags:
-      - "light"
-      summary: "Change the motors a sensor controls"
-      operationId: light-sensor.change_motors
-      parameters:
-        - name: light_sensor_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                type: integer
       responses:
         200:
           description: OK
@@ -929,164 +587,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/ScheduleNoId'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Schedule"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /schedule/change_days/{schedule_id}:
-    patch:
-      tags:
-        - "schedule"
-      summary: "Change days"
-      operationId: schedule.change_days
-      parameters:
-        - name: schedule_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/days"
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Schedule"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /schedule/change_time/{schedule_id}:
-    patch:
-      tags:
-        - "schedule"
-      summary: "Change time"
-      operationId: schedule.change_time
-      parameters:
-        - name: schedule_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/time'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Schedule"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /schedule/change_gradient/{schedule_id}:
-    patch:
-      tags:
-        - "schedule"
-      summary: "Change gradient"
-      operationId: schedule.change_gradient
-      parameters:
-        - name: schedule_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/gradient'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Schedule"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /schedule/rename/{schedule_id}:
-    patch:
-      tags:
-        - "schedule"
-      summary: "rename schedule"
-      operationId: schedule.rename
-      parameters:
-        - name: schedule_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: string
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Schedule"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /schedule/activate/{schedule_id}:
-    patch:
-      tags:
-        - "schedule"
-      summary: "Activate schedule"
-      operationId: schedule.activate
-      parameters:
-        - name: schedule_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Schedule"
-        400:
-          $ref: '#/components/responses/400InvalidInput'
-        500:
-          $ref: '#/components/responses/500InternalError'
-  /schedule/deactivate/{schedule_id}:
-    patch:
-      tags:
-        - "schedule"
-      summary: "Deactivate schedule"
-      operationId: schedule.deactivate
-      parameters:
-        - name: schedule_id
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/id'
       responses:
         200:
           description: OK
