# motor.py
@@ -1,4 +1,5 @@
 from tinydb import TinyDB, Query, where
+from db_writer import DbWriter
 import utils
 
 db = TinyDB('./database/motors.json')
@@ -49,7 +50,9 @@ def register(body):
         else:
             body['id'] = 0
 
-        db.insert(body)
+        dbWriter = DbWriter.get_instance()
+        dbWriter.write_to_db(db, body)
+        dbWriter.queue.join()
 
         new_motor = db.search(Query().id == body['id'])[0]
         return new_motor, 200
@@ -63,7 +66,9 @@ def unregister(motor_id):
         motor_exists = db.contains(where('id') == motor_id)
 
         if motor_exists:
-            db.remove(Query().id == motor_id)
+            dbWriter = DbWriter.get_instance()
+            dbWriter.delete_from_db(db, motor_id)
+            dbWriter.queue.join()
             return f"Motor {motor_id} unregistered", 200
         else:
             return f"Motor {motor_id} does not exist", 404
@@ -89,93 +94,46 @@ def update(motor_id, body):
         motor_exists = db.contains(where('id') == motor_id)
 
         if motor_exists:
-            motor_db_key = db.update(body, Query().id == motor_id)
-            return db.get(doc_id=motor_db_key[0]), 200
+            dbWriter = DbWriter.get_instance()
+            dbWriter.update_db(db, motor_id, body)
+            dbWriter.queue.join()
+
+            return db.get(Query().id == motor_id), 200
         else:
             return f"Motor {motor_id} does not exist", 404
-    except:
-        return 'Internal server error', 500
-
-
-def rename(motor_id, body):
-    try:
-        motor_exists = db.contains(where('id') == motor_id)
-
-        if motor_exists:
-            motor_db_key = db.update({'name': body}, Query().id == motor_id)
-            return db.get(doc_id=motor_db_key[0]), 200
-        else:
-            return f"Motor {body['id']} does not exist", 404
     except Exception as e:
         print(str(e))
         return 'Internal server error', 500
-
-
-def deactivate(motor_id):
-    try:
-        motor_exists = db.contains(where('id') == motor_id)
-
-        if motor_exists:
-            motor_db_key = db.update({'active': False}, Query().id == motor_id)
-            return db.get(doc_id=motor_db_key[0]), 200
-        else:
-            return f"Motor {motor_id} does not exist", 404
-    except:
-        return 'Internal server error', 500
-
-
-def activate(motor_id):
-    try:
-        motor_exists = db.contains(where('id') == motor_id)
-
-        if motor_exists:
-            motor_db_key = db.update({'active': True}, Query().id == motor_id)
-            return db.get(doc_id=motor_db_key[0]), 200
-        else:
-            return f"Motor {motor_id} does not exist", 404
-    except:
-        return 'Internal server error', 500
-
-
-def move(motor_id, body):
-    try:
-        motor_exists = db.contains(where('id') == motor_id)
-
-        if motor_exists:
-            level = body
-
-            motor_db_key = db.update({'level': level}, Query().id == motor_id)
-            return db.get(doc_id=motor_db_key[0]), 200
-        else:
-            return f"Motor {body['id']} does not exist", 404
-
-    except:
-        return 'Internal server error', 500
-
 
 def calibration_start(motor_id):
     print('start calibration')
     return 'start calibration', 200
 
+
 def calibration_stop(motor_id):
     print('stop calibration')
     return 'stop calibration', 200
+
 
 def calibration_move_up(motor_id):
     print('moving up calibration')
     return 'moving up calibration', 200
 
+
 def calibration_move_down(motor_id):
     print('moving down calibration')
     return 'moving down calibration', 200
+
 
 def calibration_stop_moving(motor_id):
     print('stop calibration moving')
     return 'stop calibration moving', 200
 
+
 def calibration_set_highest(motor_id):
     print('highest set')
     return 'highest set', 200
+
 
 def calibration_set_lowest(motor_id):
     print('lowest set')
