# schedule.py
@@ -1,7 +1,9 @@
 from tinydb import TinyDB, Query, where
+from db_writer import DbWriter
 import utils
 
 db = TinyDB('./database/schedule.json')
+motor_db = TinyDB('./database/motors.json')
 
 def get_all():
     try:
@@ -42,7 +44,9 @@ def register(body):
         else:
             body['id'] = 0
 
-        db.insert(body)
+        dbWriter = DbWriter.get_instance()
+        dbWriter.write_to_db(db, body)
+        dbWriter.queue.join()
 
         new_schedule = db.search(Query().id == body['id'])[0]
         return new_schedule, 200
@@ -55,7 +59,9 @@ def unregister(schedule_id):
         schedule_exists = db.contains(where('id') == schedule_id)
 
         if schedule_exists:
-            db.remove(Query().id == schedule_id)
+            dbWriter = DbWriter.get_instance()
+            dbWriter.delete_from_db(db, schedule_id)
+            dbWriter.queue.join()
             return f"Schedule {schedule_id} unregistered", 200
         else:
             return f"Schedule {schedule_id} does not exist", 404
@@ -89,91 +95,12 @@ def update(schedule_id, body):
         schedule_exists = db.contains(where('id') == schedule_id)
 
         if schedule_exists:
-            schedule_db_key = db.update(body, Query().id == schedule_id)
-            return db.get(doc_id=schedule_db_key[0]), 200
+            dbWriter = DbWriter.get_instance()
+            dbWriter.update_db(db, schedule_id, body)
+            dbWriter.queue.join()
+
+            return db.get(Query().id == schedule_id), 200
         else:
             return f"Schedule {schedule_id} does not exist", 404
-    except:
-        return 'Internal server error', 500
-
-
-def rename(schedule_id, body):
-    try:
-        schedule_exists = db.contains(where('id') == schedule_id)
-
-        if schedule_exists:
-            schedule_db_key = db.update({'name': body}, Query().id == schedule_id)
-            return db.get(doc_id=schedule_db_key[0]), 200
-        else:
-            return f"Schedule {body['id']} does not exist", 404
-    except:
-        return 'Internal server error', 500
-
-
-def deactivate(schedule_id):
-    try:
-        schedule_exists = db.contains(where('id') == schedule_id)
-
-        if schedule_exists:
-            schedule_db_key = db.update({'active': False}, Query().id == schedule_id)
-            return db.get(doc_id=schedule_db_key[0]), 200
-        else:
-            return f"Schedule {schedule_id} does not exist", 404
-    except:
-        return 'Internal server error', 500
-
-
-def activate(schedule_id):
-    try:
-        schedule_exists = db.contains(where('id') == schedule_id)
-
-        if schedule_exists:
-            schedule_db_key = db.update({'active': True}, Query().id == schedule_id)
-            return db.get(doc_id=schedule_db_key[0]), 200
-        else:
-            return f"Schedule {schedule_id} does not exist", 404
-    except:
-        return 'Internal server error', 500
-
-
-def change_days(schedule_id, body):
-    try:
-        days = body
-
-        for day in days:
-            if not utils.valid_day(day):
-                return f"Could not change days: Invalid day {day}", 400
-
-        db.update({'days': days}, Query().id == schedule_id)
-        schedule = db.search(Query().id == schedule_id)[0]
-        return schedule
-
-    except:
-        return 'Internal server error', 500
-
-
-def change_time(schedule_id, body):
-    try:
-        time = body
-
-        db.update({'time': time}, Query().id == schedule_id)
-        schedule = db.search(Query().id == schedule_id)[0]
-        return schedule
-
-    except:
-        return 'Internal server error', 500
-
-
-def change_gradient(schedule_id, body):
-    try:
-        gradient = body
-
-        if not 0 <= gradient:
-            return f"Could not change gradient: Invalid gradient {gradient}", 400
-
-        db.update({'gradient': gradient}, Query().id == schedule_id)
-        schedule = db.search(Query().id == schedule_id)[0]
-        return schedule
-
     except:
         return 'Internal server error', 500
